--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,7 @@ body {
     background-color: #d9dcd6;
 }
 
+/* Main navigation header to change font and background color. */
 .header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -20,6 +21,7 @@ body {
     font-size: 48px;
 }
 
+/* Color change of the SEO in Horiseon. */
 .header h1 .seo {
     color: #d9dcd6;
 }
@@ -50,6 +52,7 @@ p {
     font-size: 16px;
 }
 
+/* Displays main page large picture; Change background-image to change image */
 .hero {
     height: 800px;
     width: 100%;
@@ -75,8 +78,11 @@ p {
     margin-left: 20px;
 }
 
+/* Change font style and background attribute of the benefit side section. */
 .benefits {
+    /* Sets the margin area on the right side of an element. */
     margin-right: 20px;
+    /* Change spacing between content and border. */
     padding: 20px;
     clear: both;
     float: right;
@@ -86,20 +92,24 @@ p {
     background-color: #2589bd;
 }
 
+/* Changes side benefit lead section text color and margin. */
 .benefit-lead {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
+/* Changes side benefit brand section text color and margin. */
 .benefit-brand {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
+/* Changes  side benefit cost section text color and margin. */
 .benefit-cost {
     margin-bottom: 32px;
     color: #ffffff;
 }
+
 
 .benefit-lead h3 {
     margin-bottom: 10px;
@@ -134,6 +144,7 @@ p {
     max-width: 150px;
 }
 
+/* Change attributes of the main body section ie.color, font, font color. */
 .search-engine-optimization {
     margin-bottom: 20px;
     padding: 50px;
@@ -143,6 +154,7 @@ p {
     color: #ffffff;
 }
 
+/* Change attributes of the main body section ie.color, font, font color. */
 .online-reputation-management {
     margin-bottom: 20px;
     padding: 50px;
@@ -152,6 +164,7 @@ p {
     color: #ffffff;
 }
 
+/* Change attributes of the main body section ie.color, font, font color. */
 .social-media-marketing {
     margin-bottom: 20px;
     padding: 50px;
@@ -188,6 +201,7 @@ p {
     font-size: 36px;
 }
 
+/* Adds font attribute to the foot text. */
 .footer {
     padding: 30px;
     clear: both;
